# parks_and_ride_project

./: .gitignore  README.md  application.py  pyproject.toml  requirements.txt  run_tests.sh  zip_ebs.sh
design_and_flows/: .~lock.bloomberg_use_case_solutions_write_up.odt#  use_case_solutions_write_up.docx  use_case_solutions_write_up.odt
design_and_flows/example_data/: .~lock.Thruway_Commuter_Park_and_Ride_Lots.csv#  parks_ride.json  parks_ride.xml
lambda_functions/data_modelling/: database_interaction.py  my-development-packages
parks_and_ride/dash_app/dashboard_utils/: figure_utils.py
parks_and_ride/dash_app/database/: database_interaction.py
parks_and_ride/lambda_functions/: deploy_acquisition.sh  deploy_modelling.sh
parks_and_ride/lambda_functions/data_acquisition/: acquire_data.py
parks_and_ride/lambda_functions/data_modelling/: database_interaction.py  lambda_function.py
parks_and_ride/lambda_functions/utils/: lamb_utilities.py
parks_and_ride/plotly_application/: app.py  data_access.py
parks_and_ride/plotly_application/dashboard_components/: data_access.py  figures.py
parks_and_ride/plotly_application/dashboard_utilities/: data_access.py  figure_utils.py
parks_and_ride_src/lambda_functions/: deploy_modelling.sh
parks_and_ride_src/lambda_functions/data_acquisition/: lambda_function.py
parks_and_ride_src/lambda_functions/data_modelling/: database_interaction.py
parks_and_ride_src/lambda_functions/utils/: lamb_utilities.py
tests/: test_acquire_data.py  test_database_interaction.py  test_parks_and_ride.py  test_utils.py
