[tool.poetry]
name = "parks_and_ride"
version = "0.1.0"
description = ""
authors = ["Anthony <azelinsky1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
hypothesis = "^6.3.0"
boto3 = "^1.17.13"
moto = "^1.3.16"
mymodule = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
